# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./loans";
 export * from "./loanDocuments";
 export * from "./contracts";
 export * from "./timelineEvents";
+export * from "./withdrawals";
